# free-chat

./: .gitignore  README.md  README_CN.md  docker-compose-compute.yml  docker-compose-control.yml  docker-compose.yml  example.md  go.mod  go.sum  test_chat_cli.sh
.github/workflows/: cd.yml  ci.yml
cmd/auth-service/: Dockerfile  main.go
cmd/chat-cli/: main.go
cmd/chat-service/: main.go
cmd/gateway/: main.go
cmd/llm-inference/: .dockerignore  Dockerfile  pyproject.toml
cmd/llm-inference/src/: Makefile  chat_model.py  config.py  llm_inference.proto  llm_inference_pb2.py  llm_inference_pb2_grpc.py  server.py  test_client.py
cmd/llm-inference/src/model/: download_model.py
cmd/llm-inference/tests/: langchain_hf.py
config/: config.go  config.yml
config/rocketmq/: broker.conf
infra/cache/: redis.go
infra/database/: postgres.go
infra/queue/: consumer.go  message.go  producer.go
infra/storage/: history.go  postgres.go  session.go  summary.go  user.go
pkg/proto/: auth.proto  chat.proto
pkg/registry/: consul.go  service.go
services/api-gateway/: Dockerfile
services/auth-service/: Dockerfile
services/chat-service/: Dockerfile
services/gateway/: main.go
services/llm-inference/: .dockerignore  Dockerfile
services/manager/: service_manager.go
services/registry/: consul.go
services/service/: service_manager.go
services/web-ui/: index.html
shared/config/: config.go
shared/proto/: Makefile  auth.proto  chat.proto  llm_inference.proto
testapi/: bruno.json  health.bru  login.bru  refresh.bru  register.bru  streamchat.bru
(+107 files in other folders)
