[project]
name = "llm-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.76.0",
    "grpcio-health-checking>=1.76.0",
    "grpcio-tools>=1.76.0",
    "loguru>=0.7.3",
    "protobuf>=6.33.1",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
